Sat Dec 13 00:39:24 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkviewport.c (viewport_set_hadjustment_values): Implement
	"gravity" for RTL mode in a better way: Keep the distance from 
	the upper end of the page to the upper bound constant. This also 
	fixes problems with the initial position of the viewport in RTL 
	mode.  (#129063)
	
Fri Dec 12 21:00:12 2003  Kristian Rietveld  <kris@gtk.org>

	Combo box flipping support.

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position),
	(gtk_combo_box_size_allocate): support RTL flipping (#126518,
	patch from Matthias Clasen),
	(gtk_combo_box_popup): fix popup window alignment if there's a
	cell view frame visible (#126518, patch from Semion Chichelnitsky).

	* gtk/gtkcellview.c (gtk_cell_view_expose): support RTL flipping
	(#128348, patch from Semion Chichelnitsky).

Fri Dec 12 01:13:34 2003  Matthias Clasen  <maclas@gmx.de>

	* examples/gtkdial/gtkdial.c:
	* examples/menu/menu.c:
	* examples/scribble-xinput/scribble-xinput.c:
	* examples/progressbar/progressbar.c:
	* docs/tutorial/gtk-tut.sgml: Remove deprecated functions
	in examples. (#129074, Olexiy Avramchenko)
	* examples/calendar/Makefile:
	* examples/rangewidgets/Makefile:
	* examples/menu/Makefile: Allow deprecated functions in
	examples which use deprecated widgets.

Fri Dec 12 00:43:16 2003  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdk.c (gdk_threads_set_lock_functions): 
	* gdk/x11/gdkspawn-x11.c: Add "Since: 2.4" to doc comments.

Fri Dec 12 00:05:31 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkrange.c (gtk_range_scroll): Fix direction of 
	steppers in inverted scrollbars.  (#129084, Olexiy Avramchenko)

Thu Dec 11 23:50:30 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtknotebook.c (gtk_notebook_pages_allocate): Don't 
	unnecessarily reserve space for arrows in RTL mode.  (#129075,
	Semion Chichelnitsky)

Thu Dec 11 00:35:12 2003  Matthias Clasen  <maclas@gmx.de>

	Changes to allow "no input" windows (#64613):
	